<resources>
    <string name="app_name">快乐孕期</string>
    <string name="title_name1">最后回复</string>
    <string name="title_name2">最新发布</string>
    <string name="title_name3">精华帖</string>
    <string name="title_name4">地区选择</string>
    <string name="tab_person_1">发表的帖子</string>
    <string name="tab_person_2">回复的帖子</string>
    <string name="tab_person_3">收藏的帖子</string>
    <string name="tab_forum_1">我的圈子</string>
    <string name="tab_forum_2">全部圈子</string>
    <string name="tab_forum_3">搜索</string>
    <string name="tab_forum_4">推荐圈子</string>
    <string name="tab_forum_5">妈妈爱晒</string>
    <string name="tab_forum_6">亲子大本营</string>
    <string name="tab_forum_7">我爱摄影</string>
    <string name="tab_forum_8">美食分享</string>
    <string name="tab_forum_9">阅读生活</string>
    <string name="tab_forum_hospital_1">圈子精选</string>
    <string name="tab_forum_hospital_2">圈子交流</string>
    <string name="tab_forum_hospital_3">医生讨论</string>
    <string name="tab_forum_hospital_4">同院孕妈</string>
    <string name="tab_forum_hospital_5">医院介绍</string>
    <string name="mine_msg_post">(%d)</string>
    <string name="mine_msg_reply">(%d)</string>
    <string name="mine_msg_like">(%d)</string>
    <string name="mine_msg_inbox">(%d)</string>
    <string name="mine_msg_outbox">(%d)</string>
    <string name="record_is_empty">记录为空</string>
    <string name="share_title">我在用宝宝树的手机应用-@快乐孕期 ,推荐你试试</string>
    <string name="share_content">我在用宝宝树的手机应用-@快乐孕期 ，有孕期知识、提醒，还有很多准妈妈在交流，${URL}</string>
    <string name="umeng_share_content">好实用的育儿知识，分享给我的好友。来自：宝宝树《@快乐孕期 》安卓客户端，下载地址：http://m.babytree.com/app/pregnancy/</string>
    <string name="umeng_player_share_content">我在宝宝树的手机应用《@快乐孕期 》里听到一首很好听的胎教音乐，你也来听一下吧！来自：宝宝树《@快乐孕期 》安卓客户端，下载地址：http://m.babytree.com/app/pregnancy/</string>
    <string name="ok">确定</string>
    <string name="reload">重试</string>
    <string name="load_failure">加载失败!</string>
    <string name="empty_message">数据为空</string>
    <string name="loop">循环播放</string>
    <string name="radom">随机播放</string>
    <string name="single_loop">单曲循环</string>
    <string name="order">顺序播放</string>
    <string name="sound">音量</string>
    <string name="default_time">00:00</string>
    <string name="setting">设置</string>
    <string name="question_can_not_null">关键词不能为空</string>
    <string name="question_hospital_can_not_null">医院信息不能为空</string>
    <string name="title_forecast">请依照孕妈咪的情况开始选择</string>
    <string name="s1_forecast">1.肚子形状</string>
    <string name="s2_forecast">2.肚子大小</string>
    <string name="s3_forecast">3.肚子位置</string>
    <string name="s4_forecast">4.妊娠反应</string>
    <string name="s5_forecast">5.孕期口味</string>
    <string name="s6_forecast">6.孕期相貌</string>
    <string name="s7_forecast">7.孕期肤色</string>
    <string name="s8_forecast">8.孕妈鼻子</string>
    <string name="s9_forecast">9.孕期乳房变化</string>
    <string name="s10_forecast">10.孕妈肚脐形状</string>
    <string name="s11_forecast">11.孕期脚部</string>
    <string name="s12_forecast">12.肚脐以上妊娠线</string>
    <string name="s13_forecast">13.妊娠线方向</string>
    <string name="s14_forecast">14.身体其他部位变化</string>
    <string name="s15_forecast">15.孕期体型变化</string>
    <string name="s16_forecast">16.孕妈感觉</string>
    <string name="s17_forecast">17.孕妈尿检结果</string>
    <string name="s18_forecast">18.孕妈小便</string>
    <string name="s19_forecast">19.以线系针悬于手腕</string>
    <string name="s20_forecast">20.胎动开始时间</string>
    <string name="s21_forecast">21.胎动位置</string>
    <string name="s22_forecast">22.胎动感觉</string>
    <string name="s23_forecast">23.胎盘位置</string>
    <string name="s24_forecast">24.宝宝胎心数据</string>
    <string name="s25_forecast">25.B超时宝宝</string>
    <string name="forecast_select_yuan">圆</string>
    <string name="forecast_select_jian">尖</string>
    <string name="forecast_select_buzhidao">不知道</string>
    <string name="forecast_select_xiao">小</string>
    <string name="forecast_select_da">大</string>
    <string name="forecast_select_xia">偏下</string>
    <string name="forecast_select_shang">偏上</string>
    <string name="forecast_select_buqiang">不强</string>
    <string name="forecast_select_qianglie">强烈</string>
    <string name="forecast_select_suan">喜酸喜咸</string>
    <string name="forecast_select_la">喜辣喜甜</string>
    <string name="forecast_select_chou">变丑</string>
    <string name="forecast_select_piaoliang">变漂亮</string>
    <string name="forecast_select_hei">变黑</string>
    <string name="forecast_select_meibian">没有变化</string>
    <string name="forecast_select_buda">变化不大</string>
    <string name="forecast_select_zengda">迅猛增大</string>
    <string name="forecast_select_tuchu">突出</string>
    <string name="forecast_select_butuchu">不突出</string>
    <string name="forecast_select_meizhongzhang">没有肿胀</string>
    <string name="forecast_select_zhongzhang">有肿胀</string>
    <string name="forecast_select_xizhi">又细又直</string>
    <string name="forecast_select_buzhi">较宽不直</string>
    <string name="forecast_select_zuo">偏左</string>
    <string name="forecast_select_you">偏右</string>
    <string name="forecast_select_meigaibian">没有改变</string>
    <string name="forecast_select_pang">都变胖了</string>
    <string name="forecast_select_fubu">集中在腹部</string>
    <string name="forecast_select_pigu">集中在屁股</string>
    <string name="forecast_select_chongpei">精力充沛</string>
    <string name="forecast_select_wuli">全身无力</string>
    <string name="forecast_select_pianjian">偏碱性</string>
    <string name="forecast_select_piansuan">偏酸性</string>
    <string name="forecast_select_qing">清</string>
    <string name="forecast_select_buqing">不清</string>
    <string name="forecast_select_qianhoubai">前后摆动</string>
    <string name="forecast_select_zuoyoubai">左右摆动</string>
    <string name="forecast_select_16">16周左右</string>
    <string name="forecast_select_20">20周左右</string>
    <string name="forecast_select_quan">拳打脚踢</string>
    <string name="forecast_select_zhengge">整个身体翻动</string>
    <string name="forecast_select_qianbi">前壁</string>
    <string name="forecast_select_houbi">后壁</string>
    <string name="forecast_select_140">140左右</string>
    <string name="forecast_select_150">150左右</string>
    <string name="forecast_select_lianwai">脸向外</string>
    <string name="forecast_select_xiangma">脸像妈妈</string>
    <string name="guide_text_0">亲！登录后 您可以和其他孕妈妈一起交流分享孕期心得</string>
    <string name="guide_text_1">登录后 可以免费抽奖，好孕期！好运气！</string>
    <string name="guide_text_2">登录后 可以给其他孕妈妈发送信息</string>
    <string name="operation">操作提示</string>
    <string name="send_message">发送消息</string>
    <string name="send">发送</string>
    <string name="send_message_success">发送消息成功</string>
    <string name="send_message_fail">发送消息失败</string>
    <string name="send_message_remind">请输入发送消息内容</string>
    <string name="dialog_cancle">取消</string>
    <string name="sign_in">签到加孕气,邀请得好礼</string>
    <string name="sign_in_sub">累计孕气领取宝宝树礼物</string>
    <string name="invite_friend">为邀请您过来的好友加孕气</string>
    <string name="invite_friend_sub">在此输入邀请码为你的好友加孕气</string>
    <string name="main_hospital_title">北京医院交流信息</string>
    <string name="main_hospital_content">设置好您的医院,与同院孕妈交流</string>
    <string name="search">请输入医院</string>
    <string name="choice_hospital_city">请选择医院所在城市</string>
    <string name="choice_city">选择城市</string>
    <string name="choice_dq">选择医院所在地区</string>
    <string name="skip">跳 过</string>
    <string name="choice_location">选择地区</string>
    <string name="location_hospital_info_title">%s医院</string>
    <string name="set_my_hospital">设为我的医院</string>
    <string name="jd_hospital">建档攻略>></string>
    <string name="tz_count">帖子数:</string>
    <string name="ym_count">孕妈:</string>
    <string name="hospital_footer_txt1">添加医院信息</string>
    <string name="hospital_footer_txt2">如果您的医院没有在选取列表中点击此处添加</string>
    <string name="set_your_hospital_txt">设置您的医院</string>
    <string name="save">保存</string>
    <string name="search_hospital">搜 索</string>
    <string name="set_hospital_success">设置医院成功</string>
    <string name="save_success">提交成功</string>
    <string name="set_hospital_failed">您的医院暂时还没有圈子，我们会在三个工作日内为您开通此医院圈子</string>
    <string name="regist_title_Info1">注册一个账号</string>
    <string name="regist_title_Info2">让你的好友知道你在为她加孕气吧</string>
    <string name="regist_info1">昵称输入一次后不能修改</string>
    <string name="regist_info2">输入您好友的邀请码双方都能获得孕气值，兑换奖品。（非必填）</string>
    <string name="regist_info3">您输入的邮箱已经注册了宝宝树，</string>
    <string name="regist_info4">是否用这个账号绑定微博?</string>
    <string name="new_user">新用户</string>
    <string name="old_user">绑定账户</string>
    <string name="current_yz">目前孕气值：</string>
    <string name="yq_market">孕气商店</string>
    <string name="recommand_circle">推荐圈子</string>
    <string name="find_password">找回密码>></string>
    <string name="s_invite_father">邀请准爸爸</string>
    <string name="s_invite_father_next">下一步</string>
    <string name="role_select">请选择您的身份</string>
    <string name="s_role_father_in">进入爸爸版</string>
    <string name="s_role_mother_in">进入妈妈版</string>
    <string name="s_role_father">我是准爸爸</string>
    <string name="s_role_mother">我是准妈妈</string>
    <string name="s_invite_tip">让准爸爸每天了解一些孕期知识，\n还可以为您增加孕气。\n\n给准爸爸的邀请码是</string>
    <string name="s_invite_tip_already">您已经邀请了准爸爸。\n\n给准爸爸的邀请码是</string>
    <string name="s_invite_code_retry">邀请码获取失败，请重试</string>
    <string name="s_invite_code_loading">正在获取邀请码，请稍候...</string>
    <string name="s_invite_info">和准爸爸一起度过快乐孕期</string>
    <string name="s_invite_intr_title_1">如何成功邀请准爸爸？</string>
    <string name="s_invite_intr_info_1">1、发送邀请短信\n2、准爸爸下载安装 \"快乐孕期\"\n3、进入准爸爸版(设置内也可切换)\n4、输入短信内的邀请码\n5、成功绑定</string>
    <string name="s_invite_intr_title_2">绑定后准爸爸可以做什么？</string>
    <string name="s_invite_intr_info_2">1、随时知道您的怀孕状态\n2、每天有适合准爸爸的孕期提醒\n3、丰富的孕期知识和食谱可供阅读\n4、准爸爸可为您增加孕气\n5、和您在线沟通</string>
    <string name="s_invite_intr_info_3">邀请准爸爸需要登录</string>
    <string name="s_invite_code">给准爸爸的邀请码是：%1$s</string>
    <string name="s_send_invite">发送邀请</string>
    <string name="s_again_invite">重新获取</string>
    <string name="s_retry_invite">重新邀请</string>
    <string name="s_cancel_invite">取消邀请</string>
    <string name="s_send_msg">\"亲爱哒，装一下这个快乐孕期（下载地址%1$s ），我记不住的你要提醒我哈，我的邀请码是%2$s。爱你哟。\"</string>
    <string name="s_add_lucky_father">和准爸爸一起集孕气</string>
    <string name="s_fail_get_invite_code">获取邀请码失败</string>
    <string name="s_switch_2_yuer">恭喜您的宝宝平安降生。推荐您切换“快乐育儿”。无需重新下载，立刻获得丰富的育儿知识、营养食谱。您的登录信息、同龄圈等信息也都完整保留，以方便您的连贯使用。快快开启“快乐育儿”吧。</string>
    <string name="s_switch_2_daddy">确定要重新选择吗？</string>
    <string name="s_mommy_info_clear">准妈妈登录信息将被清除</string>
    <string name="s_exit_sure">确定要退出登录吗？</string>
    <string name="s_fail_unbind">解除绑定失败</string>
    <string name="s_yunqi_add_by_daddy">准爸爸共为您加了%1$s孕气</string>
    <string name="s_invite_unbind_first">请进入邀请页面，先解除绑定</string>
    <string name="s_un_login">当前未登录，请先登录</string>
    <string name="s_home_item_knowledge">每日知识</string>
    <string name="s_home_item_tip">关爱提醒</string>
    <string name="s_home_item_recipe">孕期食谱</string>
    <string name="s_home_item_recipe_yuer">育儿食谱</string>
    <string name="s_home_item_cicle_age_yuer">同龄交流</string>
    <string name="s_home_item_cicle_age">孕妈交流</string>
    <string name="s_home_item_cicle_hospital">妇产医院圈</string>
    <string name="s_home_item_expert">专家在线</string>
    <string name="s_home_item_babytree_box">BabyBox</string>
    <string name="s_home_item_active">精彩活动</string>
    <string name="s_home_item_tools">小工具</string>
    <string name="s_home_item_cd">早教光盘</string>
    <string name="s_home_switch_2_yuer">切换至快乐育儿</string>
    <string name="s_home_babytree_commend">宝宝树推荐</string>
    <string name="s_home_sign_in">签\n到</string>
    <string name="s_home_notify_title_type1">您的话题 \"%1$s\" 有 %2$d 条新回贴</string>
    <string name="s_home_notify_title_type2"> %1$s 在话题 \"%2$s\" 中回复了您</string>
    <string name="s_home_notify">通知</string>
    <string name="s_home_load_fail">数据获取失败，请点击刷新</string>
    <string name="today_tip">今日提醒</string>
    <string name="sure">确定</string>
    <string name="yaoq_code">请输入准妈妈发的邀请码</string>
</resources>