<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_father_intr"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="42dp"
        android:layout_marginRight="42dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_send_invite_title_1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:gravity="center_vertical|left"
            android:text="@string/s_invite_intr_title_1"
            android:textColor="@color/invite_title"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tv_send_invite_info_1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_below="@+id/tv_send_invite_title_1"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical|left"
            android:text="@string/s_invite_intr_info_1"
            android:textColor="@color/invite_info"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/s_invite_intr_title_2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_send_invite_info_1"
            android:layout_marginTop="14dp"
            android:gravity="center_vertical|left"
            android:text="@string/s_invite_intr_title_2"
            android:textColor="@color/invite_title"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tv_send_invite_info_2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_below="@+id/tv_send_invite_title_2"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical|left"
            android:text="@string/s_invite_intr_info_2"
            android:textColor="@color/invite_info"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_invite_next"
            style="@style/btn_invite_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="36dp"
            android:background="@drawable/btn_invite_send"
            android:gravity="center"
            android:text="@string/s_invite_father_next"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_below="@+id/tv_send_invite_title_2"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/s_invite_intr_info_3"
            android:textColor="@color/invite_info"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>