<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/hospital_info_list_selector_background"
        android:descendantFocusability="blocksDescendants"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/tv_name_hospital"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:clickable="true"
                android:ellipsize="end"
                android:focusable="false"
                android:singleLine="true"
                android:text="北京妇产科医院"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_tz_t"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_name_hospital"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/tz_count"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_tz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/tv_tz_t"
                android:layout_below="@+id/tv_name_hospital"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/tv_tz_t"
                android:textColor="@color/pink1"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_ym_t"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/tv_tz_t"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@+id/tv_tz"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/ym_count"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_ym"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/tv_tz_t"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/tv_ym_t"
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="@color/pink1"
                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_jd_hospital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="4dp"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:focusable="false"
                android:text="@string/jd_hospital"
                android:textColor="@color/sky_blue"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_set_my_hospital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_jd_hospital"
                android:layout_gravity="bottom"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/btn_set_hospital"
                android:clickable="true"
                android:focusable="false"
                android:text="@string/set_my_hospital"
                android:textColor="@color/white"
                android:textSize="11sp" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>