<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:visibility="visible" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_bkg"
        android:gravity="center"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/txt_third_yqm"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="5dip"
            android:layout_weight="1"
            android:background="@null"
            android:hint="邀请码"
            android:singleLine="true"
            android:maxLength="10"
            android:textColor="@color/no_hint_color"
            android:textColorHint="@color/hint_color"
            android:textSize="16sp" >
        </EditText>
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="25dip"
        android:layout_marginRight="25dip"
        android:layout_marginTop="10dip"
        android:text="@string/regist_info2"
        android:textColor="@color/text_color"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_third_sure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_add_lucky"
        android:text="确定"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_current_num" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="20dip"
        android:gravity="center"
        android:text="@string/current_yz"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dip"
        android:gravity="left"
        android:text="@string/yq_market"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_load"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="加载中..."
        android:textColor="@color/black" 
        android:visibility="gone"/>

    <HorizontalScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <LinearLayout
            android:id="@+id/mygallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible" >
        </LinearLayout>
    </HorizontalScrollView>

</LinearLayout>